--- a/src/app/share/navbar/navbar.component.html
+++ b/src/app/share/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <mat-sidenav-container>
-    <mat-sidenav class="sidenav" mode="side" opened fixedInViewport="true">
+    <mat-sidenav class="sidenav" mode="side" opened fixedInViewport="true" fixedTopGap="50">
         <mat-nav-list>
             <a routerLink="/atividades">Atividades</a>
         </mat-nav-list>
