--- a/src/app/share/clock/clock.component.html
+++ b/src/app/share/clock/clock.component.html
@@ -1,3 +1,4 @@
 <div class="container">
-   {{ clock.hour }} : {{ clock.minute }} : {{ clock.seconds }}
+   {{ clock.hour }} : {{ clock.minute }} : {{ clock.second }}
+   <button (click)='NameActivity()'>Qual eh a atividade do momento</button>
 </div>
